refactor : 오류 수정 및 yml 수정